# manus-rmy

./: .env  .gitignore  test.py
api/: .env  app_config.yaml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: c7ec539e1637_create_user_tables.py
api/app/: main.py
api/app/application/errors/: exceptions.py
api/app/application/services/: app_config_service.py  status_service.py
api/app/domain/models/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
api/app/domain/repositories/: app_config_repository.py
api/app/domain/services/agents/: base.py  planner.py  react.py
api/app/domain/services/prompts/: plan.py  react.py  system.py
api/app/domain/services/tools/: base.py  browser.py  file.py  mcp.py  search.py  shell.py
api/app/infrastructure/logging/: logging.py
api/app/infrastructure/models/: user.py
api/app/infrastructure/repositories/: file_app_config_repository.py
api/app/infrastructure/storage/: database.py  redis.py  tos.py
api/app/interface/: dependencies.py
api/app/interface/endpoints/: app_config_routes.py  routes.py  status_routes.py
api/app/interface/errors/: exeception_handlers.py
api/app/interface/schemas/: response.py
api/core/: config.py
api/tests/: conftest.py
api/tests/app/interface/endpoints/: test_status_routes.py
sandbox/: pyproject.toml
sandbox/app/: main.py
sandbox/app/core/: config.py
sandbox/app/interface/: service_dependencies.py
sandbox/app/interface/schemas/: base.py  (+1 more)
sandbox/app/models/: shell.py
sandbox/app/services/: shell.py
(+8 files in other folders)
